--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -120,7 +120,34 @@
 		</div>
 	</div>
 </div>
-		
+
+<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+	<div class="draggable"  >
+		<div class="draggableheader">
+		<p class="player">Player:<span>×</span></p>
+
+		<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		</table>
+		<button class="btntic" id="Newgame">New Game</button>
+		</div>
+	</div>
+</div>
+
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
@@ -385,25 +412,24 @@
 	</div>
 </section>
 
-<footer> <!--footer--------------->
-	<div class="socialcontainer">
-		<h2>Social media</h2>
-		<p>Wil je meer zien van mij?  </p>
-			<div class="social-icons">
-				<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
-				<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
-				<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
-				<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
-			</div>
-			<p class="copyright">Butter since 1998 ©</p>
-	
-	</div>
-	</footer> <!--footer end --------------->
-		</main>
+</main>
+<footer class="footer"> <!--footer--------------->
+	<h2>Social media</h2>
+	<p>Wil je meer zien van mij?  </p>
+		<div class="social-icons">
+			<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+			<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
+		</div>
+		<p class="copyright">Butter since 1998 ©</p>
+</footer> <!--footer end --------------->
+
 
 <script src="JS/jquery.min.js"></script>
 <script src="JS/owl.carousel.min.js"></script>
 <script src="JS/main.js"></script>		
+<script src="JS/tictaktoe.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
