--- a/Projecten.html
+++ b/Projecten.html
@@ -115,7 +115,34 @@
 		</div>
 	</div>
 </div>
-		
+	
+<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+	<div class="draggable"  >
+		<div class="draggableheader">
+		<p class="player">Player:<span>×</span></p>
+
+		<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		</table>
+		<button class="btntic" id="Newgame">New Game</button>
+		</div>
+	</div>
+</div>
+
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
@@ -138,6 +165,7 @@
 		</div>
 	</div>
 </div>
+
 
 <div class="container">
 	<div class="row">
@@ -214,8 +242,9 @@
 	</div>
 </div>
 
-<footer> <!--footer--------------->
-<div class="socialcontainer">
+</main>
+
+<footer class="footer"> <!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -225,11 +254,11 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-
-</div>
 </footer> <!--footer end --------------->
-		</main>
-<script src="JS/main.js"></script>		
+
+		
+<script src="JS/main.js"></script>	
+<script src="JS/tictaktoe.js"></script>		
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
