--- a/Contact.html
+++ b/Contact.html
@@ -80,31 +80,8 @@
 
 </div>
 </nav> <!--- Navbar End   . -->											<!--- Navbar End    -->		   
-	  <main>
-<div class="draggable"  >   <!--- Button widget  -->	
-	<div class="draggableheader">
-		<div class="expando js-expando">
-			<div class="expando__inner js-expando-inner">
-				<div class="expando__inner-inverter js-expando-inner-inverter">
-					<div class="expando__content js-content">
-						<ul class="expando__content-list">
-							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
-							<li>  Upcomming.. </button> </li>
-						</ul>
-						<button class="expando__close js-expando-collapse-btn">Close</button>
-					</div>
-						<button class="expando__btn js-expando-expand-btn">
-						<div class="plusgroote">
-						<B>+</B>
-						</div>
-						</button>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--Expand Calculator-------------->
-<div id="toggle" style="display: none">
+<main>
+<div id="toggle" style="display: none">   <!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -137,97 +114,77 @@
 			</div>
 		</div>
 	</div>
-</div> 
+</div>
 
+<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+	<div class="draggable"  >
+		<div class="draggableheader">
+		<p class="player">Player:<span>×</span></p>
 
-		  <div class="content">
-    
-			<div class="container">
-			  <div class="row align-items-stretch justify-content-center no-gutters">
-				<div class="col-md-7">
-				  <div class="form h-100 contact-wrap p-5">
-					<h3 class="text-center">Let's Talk</h3>
-					<form action="badrkhaie@hotmail.com" method="post">
-					  <div class="row">
-						<div class="col-md-6 form-group mb-3">
-						  <label for="" class="col-form-label">Name *</label>
-						  <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
-						</div>
-						<div class="col-md-6 form-group mb-3">
-						  <label for="" class="col-form-label">Email *</label>
-						  <input type="email" class="form-control" name="email" id="email"  placeholder="Your email">
-						</div>
-					  </div>
+		<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		</table>
+		<button class="btntic" id="Newgame">New Game</button>
+		</div>
+	</div>
+</div>
 		
-					  <div class="row">
-						<div class="col-md-12 form-group mb-3">
-						  <label for="budget" class="col-form-label">Subject</label>
-						  <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
-						</div>
-					  </div>
-		
-					  <div class="row mb-5">
-						<div class="col-md-12 form-group mb-3">
-						  <label for="message" class="col-form-label">Message *</label>
-						  <textarea class="form-control" name="message" id="message" cols="30" rows="4"  placeholder="Write your message"></textarea>
-						</div>
-					  </div>
-					  <div class="row justify-content-center">
-						<div class="col-md-5 form-group text-center">
-						  <input type="submit" value="Send Message" class="btn btn-block btn-primary rounded-0 py-2 px-4">
-						  <span class="submitting"></span>
-						</div>
-					  </div>
-					</form>
-		
-					<div id="form-message-warning mt-4"></div> 
-					<div id="form-message-success">
-					  Your message was sent, thank you!
+<div class="draggable"  >   <!--- Button widget  -->	
+	<div class="draggableheader">
+		<div class="expando js-expando">
+			<div class="expando__inner js-expando-inner">
+				<div class="expando__inner-inverter js-expando-inner-inverter">
+					<div class="expando__content js-content">
+						<ul class="expando__content-list">
+							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
+							<li>  <button class="button1" onclick="openTictak()">🎮TicTak </button> </li>
+						</ul>
+						<button class="expando__close js-expando-collapse-btn">Close</button>
 					</div>
-		
-				  </div>
+						<button class="expando__btn js-expando-expand-btn">
+						<div class="plusgroote">
+						<B>+</B>
+						</div>
+						</button>
 				</div>
-			  </div>
 			</div>
-		
-		  </div>
-		  <form style="margin-left: 6%;" class="email" action="https://www.enformed.io/badrkhaie@hotmail.com" method="post">
-			<p>Name:</p>
-			<input type="text" name="first_name" />
-			<div id="margin" style="height: 0.5%;"></div>
-			<p>E-mail:</p>
-			<div id="margin" style="height: 0.5%;"></div>
-			<input type="text" name="email" />
-			<div id="margin" style="height: 0.5%;"></div>
-			<p>Subject:</p>
-			<div id="margin" style="height: 0.5%;"></div>
-			<input type="text" name="subject" />
-			<div id="margin" style="height: 0.5%;"></div>
-			<p>Message:</p>
-			<div id="margin" style="height: 0.5%;"></div>
-			<textarea name="message"></textarea>
-			<div id="margin" style="height: 0.5%;"></div>
-			<button type="submit" class="btn btn-default">Submit Form</button>
-		  </form>
+		</div>
+	</div>
+</div>
+
+</main>
+
 		 
 
-		  <footer> <!--footer--------------->
-			<div class="socialcontainer">
-				<h2>Social media</h2>
-				<p>Wil je meer zien van mij?  </p>
-					<div class="social-icons">
-						<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
-						<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
-						<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
-						<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
-					</div>
-					<p class="copyright">Butter since 1998 ©</p>
-			
-			</div>
-			</footer> <!--footer end --------------->
-		</main>
+<footer class="footer"> <!--footer--------------->
+	<h2>Social media</h2>
+	<p>Wil je meer zien van mij?  </p>
+		<div class="social-icons">
+			<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
+			<a href="https://twitter.com/Badrkhaie"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
+		</div>
+		<p class="copyright">Butter since 1998 ©</p>
+</footer> <!--footer end --------------->
+
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
+<script src="JS/tictaktoe.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
