--- a/index.html
+++ b/index.html
@@ -116,39 +116,32 @@
 	</div>
 </div>
 
-<div class="container-fluid">
-    <h1>Tic Tac Toe</h1>
-    <h2 id="results"></h2>
-    <button id="selectX" class="btn btn-default">Play as X</button>
-    <button id="selectO" class="btn btn-default">Play as O</button>
-    <div id="boardDisplay">
-      <div class="row">
-        <div id="grid0" class="col-md-offset-3 col-md-2 col-xs-4">
-        </div>
-        <div id="grid1" class="col-md-2 col-xs-4">
-        </div>
-        <div id="grid2" class="col-md-2 col-xs-4">
-        </div>
-      </div>
-      <div class="row">
-        <div id="grid3" class="col-md-offset-3 col-md-2 col-xs-4">
-        </div>
-        <div id="grid4" class="col-md-2 col-xs-4">
-        </div>
-        <div id="grid5" class="col-md-2 col-xs-4">
-        </div>
-      </div>
-      <div class="row">
-        <div id="grid6" class="col-md-offset-3 col-md-2 col-xs-4">
-        </div>
-        <div id="grid7" class="col-md-2 col-xs-4">
-        </div>
-        <div id="grid8" class="col-md-2 col-xs-4">
-        </div>
-      </div>
-    </div>
-  </div>
+<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+	<div class="draggable"  >
+		<div class="draggableheader">
+		<p class="player">Player:<span>×</span></p>
 
+		<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		</table>
+		<button class="btntic" id="Newgame">New Game</button>
+		</div>
+	</div>
+</div>
 		
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
@@ -199,8 +192,9 @@
   </div>
 </div>
 
-<footer> <!--footer--------------->
-<div class="socialcontainer">
+</main>
+
+<footer class="footer"> <!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -210,13 +204,13 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-
-</div>
 </footer> <!--footer end --------------->
-		</main>
+
+		
 <script src="JS/main.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
+<script src="JS/tictaktoe.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
