--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -252,7 +252,7 @@
 			<a href="https://www.linkedin.com/in/badr-khaie-2b805267/"><i class="fab fa-linkedin"></i></a>
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
-		<p class="css-typing" class="copyright">Butter since 1998 ©</p>
+		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
 
 		
