--- a/Projecten.html
+++ b/Projecten.html
@@ -193,9 +193,10 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
+				<a  onclick="myWarn()"  target="_blank"></a>
 				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portfolio.png" >
+				<img class="content-image"  src="Projecten/Rekenmachine/Calculator Project/Calculator v3/MijnErvaringen.html" >
 				<div class="content-details">
 					<h3 class="content-title">Rekenmachine</h3>
 				</div>
