--- a/Projecten.html
+++ b/Projecten.html
@@ -193,10 +193,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a  onclick="myWarn()"  target="_blank"></a>
-				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
+				<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Projecten/Rekenmachine/Calculator Project/Calculator v3/MijnErvaringen.html" >
+				<img class="content-image"  src="Pictures/Rekenmachine.png" >
 				<div class="content-details">
 					<h3 class="content-title">Rekenmachine</h3>
 				</div>
@@ -207,9 +206,9 @@
 </div>
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4"> 
 			<div class="content">
-				<a  onclick="myWarn()"  target="_blank">
+				<a  onclick="bloemen()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Bloemenwinkel.png" onclick="warn()">
 				<div class="content-details">
