Button Widget updated

--- a/Projecten.html
+++ b/Projecten.html
@@ -115,7 +115,7 @@
 		</div>
 	</div>
 </div>
-	
+
 <div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
@@ -142,7 +142,7 @@
 		</div>
 	</div>
 </div>
-
+		
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
@@ -151,7 +151,7 @@
 					<div class="expando__content js-content">
 						<ul class="expando__content-list">
 							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
-							<li>  Upcomming.. </button> </li>
+							<li>  <button class="button1" onclick="openTictak()">🎮TicTak </button> </li>
 						</ul>
 						<button class="expando__close js-expando-collapse-btn">Close</button>
 					</div>
