--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -147,7 +147,7 @@
 		</div>
 	</div>
 </div>
-
+		
 <div class="draggable"  >   <!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
@@ -156,7 +156,7 @@
 					<div class="expando__content js-content">
 						<ul class="expando__content-list">
 							<li>  <button class="button1" onclick="openCalculator()">🧮Calculator </button> </li>
-							<li>  Upcomming.. </button> </li>
+							<li>  <button class="button1" onclick="openTictak()">🎮TicTak </button> </li>
 						</ul>
 						<button class="expando__close js-expando-collapse-btn">Close</button>
 					</div>
