--- a/index.html
+++ b/index.html
@@ -166,31 +166,50 @@
 	</div>
 </div>
 
+<div id="container">	
+	
+	<div class="product-details">
+		
+	<h1>Badr Khaie</h1>
+			<p class="information"> <h6>Kort over mij</h6> 
+				"Hallo ik ben Badr!  Geboren op 16 Juli 1998. 
+				Sinds kinds zijnde vond ik apparaten super interessant, en vooral computers!
+				Dankzij mijn enthousiasme sinds kind wist ik al gouw welk richting ik op wou gaan.
+				Verder vond ik beveiliging op het gebied van internet ook heel erg interessant want internet wordt steeds meer dus wordt cybercrime ook steeds meer!
+				Daarom zal ik mij ook gaan verdiepen in Cybersecurity!   "
+			</p>		
+</div>
+	
+<div class="product-image">
+	
+	<img src="Pictures/profile.png"  alt="">
+	
+
+<div class="info">
+	<h2 class="ID"> Quotes & Hobbies </h2><br>
+	
+	<ul> 
+		<li>"Who dares wins" </li>
+		<li>"No pain no gain"</li>
+			<br>
+		<li>Sport 🏋🏻 </li>
+		<li>Games 🎮</li>
+	</ul>
+</div>
+</div>
+
+</div>
+
+
+
 <div class="about-container"> <!--about-me-text-->
-	<div class="flip-card">
-		<div class="flip-card-inner">
-		  <div class="flip-card-front">
-			<img src="Pictures/profile.png"  alt="Avatar" style="width:250px;height:250px;">
-		  </div>
-		  <div class="flip-card-back">
-			<h1>Badr Khaie</h1>
-			<p>Student Mondriaan</p>
-			<p> <B>- Fun fact -</B> <br>I love Sport 🏋🏻<br> <i> "No pain no gain" </i> </p>
-			<a href="" class="btn btn-dark" role="button" aria-pressed="true">Download CV</a>
-		  </div>
-		</div>
-	  </div>
-  <div class="about-text">
-		<p>Over mij</p>
-		<p>Software Developer</p>
+		<h6>Software Developer</h6>
 		<p>Als MBO student bij de Roc Mondriaan ben ik bereid om door te groeien van Software Developer (MBO) Naar Cybersecurity (HBO) <br>
            <i> "Who dares wins 🏆"</i> </p>
 		<p>Wil je meer over mij weten? <br> Neem contact op!</p>
 		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
-
-
-  </div>
 </div>
+
 
 </main>
 
