--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <script src="JS/main.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
-<script src="JS/tictaktoe.js"></script>
+<script src="JS/bko.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
