--- a/Projecten.html
+++ b/Projecten.html
@@ -258,7 +258,7 @@
 
 		
 <script src="JS/main.js"></script>	
-<script src="JS/tictaktoe.js"></script>		
+<script src="JS/bko.js"></script>		
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
