--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 </footer> <!--footer end --------------->
 
 		
-<script src="JS/main.js"></script>
+<script src="JS/tiktaktoe.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="JS/bko.js"></script>
