--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
 
-<script src="JS/tiktaktoe.js"></script>
+<script src="JS/bko.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
