--- a/Projecten.html
+++ b/Projecten.html
@@ -219,11 +219,11 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
+				<a  onclick="bko()"  target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portfolio.png" >
+				<img class="content-image"  src="Pictures/BKO.png" >
 				<div class="content-details">
-					<h3 class="content-title">BoterXKaas</h3>
+					<h3 class="content-title">BKO</h3>
 				</div>
 				</a>
 			</div>
@@ -257,7 +257,7 @@
 </footer> <!--footer end --------------->
 
 		
-	
+<script src="JS/main.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
