--- a/Projecten.html
+++ b/Projecten.html
@@ -182,9 +182,9 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
+				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portfolio.png" >
+				<img class="content-image"  src="Pictures/Hogerlager.png" >
 				<div class="content-details">
 					<h3 class="content-title">Kaartspel</h3>
 				</div>
