--- a/Projecten.html
+++ b/Projecten.html
@@ -184,6 +184,8 @@
 			<div class="content">
 				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
 				<div class="content-overlay"></div>
+				<a href="Projecten/HogerLager/bin/Debug/netcoreapp3.1/Hoger-Lager-main.7z" download target="_blank">
+				
 				<img class="content-image"  src="Pictures/Hogerlager.png" >
 				<div class="content-details">
 					<h3 class="content-title">Kaartspel</h3>
