--- a/Projecten.html
+++ b/Projecten.html
@@ -184,7 +184,7 @@
 			<div class="content">
 				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
 				<div class="content-overlay"></div>
-				<a href="Projecten/HogerLager/bin/Debug/netcoreapp3.1/Hoger-Lager-main.7z" download target="_blank">
+				
 				
 				<img class="content-image"  src="Pictures/Hogerlager.png" >
 				<div class="content-details">
@@ -221,7 +221,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a  onclick="bko()"  target="_blank">
+				<a  onclick="bke()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/BKO.png" >
 				<div class="content-details">
