--- a/Projecten.html
+++ b/Projecten.html
@@ -184,8 +184,6 @@
 			<div class="content">
 				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
 				<div class="content-overlay"></div>
-				
-				
 				<img class="content-image"  src="Pictures/Hogerlager.png" >
 				<div class="content-details">
 					<h3 class="content-title">Kaartspel</h3>
@@ -232,11 +230,11 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a href="https://bkhaie.github.io/Portfolio/" target="_blank">
+				<a  id="rekenmachine" onclick="dicespel()"  target="_blank">
 				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portfolio.png" >
+				<img class="content-image"  src="Pictures/Dice.png" >
 				<div class="content-details">
-					<h3 class="content-title">Project</h3>
+					<h3 class="content-title">Dicespel</h3>
 				</div>
 				</a>
 			</div>
