--- a/Projecten.html
+++ b/Projecten.html
@@ -219,11 +219,11 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a  onclick="bke()"  target="_blank">
+				<a  onclick="BKE()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/BKO.png" >
 				<div class="content-details">
-					<h3 class="content-title">BKO</h3>
+					<h3 class="content-title">BKE</h3>
 				</div>
 				</a>
 			</div>
