--- a/Projecten.html
+++ b/Projecten.html
@@ -219,7 +219,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a  onclick="BKE()"  target="_blank">
+				<a  id="boterkaas" onclick="boterkaas()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/BKO.png" >
 				<div class="content-details">
@@ -230,7 +230,7 @@
 		</div>
 		<div class="col-md-4">
 			<div class="content">
-				<a  id="rekenmachine" onclick="dicespel()"  target="_blank">
+				<a  id="dicespel" onclick="dicespel()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Dice.png" >
 				<div class="content-details">
