--- a/Projecten.html
+++ b/Projecten.html
@@ -169,7 +169,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4">		<!--- Portfolio  -->
 			<div class="content">
 				<a href="https://bkhaie.github.io/Portofolio/index.html" target="_blank">
 				<div class="content-overlay"></div>
@@ -180,7 +180,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4">		<!--- kaartspel  -->
 			<div class="content">
 				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
 				<div class="content-overlay"></div>
@@ -191,7 +191,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4">		<!--- Rekenmachine  -->
 			<div class="content">
 				<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank">
 				<div class="content-overlay"></div>
@@ -206,7 +206,7 @@
 </div>
 <div class="container">
 	<div class="row">
-		<div class="col-md-4"> 
+		<div class="col-md-4">		<!--- bloemen  -->
 			<div class="content">
 				<a  onclick="bloemen()"  target="_blank">
 				<div class="content-overlay"></div>
@@ -217,7 +217,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4">		<!--- boterkaas  -->
 			<div class="content">
 				<a  id="boterkaas" onclick="boterkaas()"  target="_blank">
 				<div class="content-overlay"></div>
@@ -228,7 +228,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-4">		<!--- dicespel  -->
 			<div class="content">
 				<a  id="dicespel" onclick="dicespel()"  target="_blank">
 				<div class="content-overlay"></div>
