--- a/Projecten.html
+++ b/Projecten.html
@@ -166,45 +166,45 @@
 	</div>
 </div>
 
-
-<div class="container">
-	<div class="row">
-		<div class="col-md-4">		<!--- Portfolio  -->
-			<div class="content">
-				<a href="https://bkhaie.github.io/Portofolio/index.html" target="_blank">
-				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Portfolio.png" >
-				<div class="content-details">
-					<h3 class="content-title">Portfolio</h3>
-				</div>
-				</a>
+<div class="container">		<!--- Rij 1  -->
+<div class="row">		
+	<div class="col-md-4">		<!--- Portfolio  -->
+		<div class="content">
+			<a href="https://bkhaie.github.io/Portofolio/index.html" target="_blank">
+			<div class="content-overlay"></div>
+			<img class="content-image"  src="Pictures/Portfolio.png" >
+			<div class="content-details">
+				<h3 class="content-title">Portfolio</h3>
 			</div>
+			</a>
 		</div>
-		<div class="col-md-4">		<!--- kaartspel  -->
-			<div class="content">
-				<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
-				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Hogerlager.png" >
-				<div class="content-details">
-					<h3 class="content-title">Kaartspel</h3>
-				</div>
-				</a>
+	</div>
+	<div class="col-md-4">		<!--- kaartspel  -->
+		<div class="content">
+			<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
+			<div class="content-overlay"></div>
+			<img class="content-image"  src="Pictures/Hogerlager.png" >
+			<div class="content-details">
+				<h3 class="content-title">Kaartspel</h3>
 			</div>
+			</a>
 		</div>
-		<div class="col-md-4">		<!--- Rekenmachine  -->
-			<div class="content">
-				<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank">
-				<div class="content-overlay"></div>
-				<img class="content-image"  src="Pictures/Rekenmachine.png" >
-				<div class="content-details">
-					<h3 class="content-title">Rekenmachine</h3>
-				</div>
-				</a>
+	</div>
+	<div class="col-md-4">		<!--- Rekenmachine  -->
+		<div class="content">
+			<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank">
+			<div class="content-overlay"></div>
+			<img class="content-image"  src="Pictures/Rekenmachine.png" >
+			<div class="content-details">
+				<h3 class="content-title">Rekenmachine</h3>
 			</div>
+			</a>
 		</div>
 	</div>
 </div>
-<div class="container">
+
+</div>
+<div class="container">		<!--- Rij 2  -->
 	<div class="row">
 		<div class="col-md-4">		<!--- bloemen  -->
 			<div class="content">
