--- a/Projecten.html
+++ b/Projecten.html
@@ -230,7 +230,7 @@
 		</div>
 		<div class="col-md-4">		<!--- dicespel  -->
 			<div class="content">
-				<a  id="dicespel" onclick="dicespel()"  target="_blank">
+				<a  id="dicespel" onClick="passwd()" onclick="dicespel()"  target="_blank">
 				<div class="content-overlay"></div>
 				<img class="content-image"  src="Pictures/Dice.png" >
 				<div class="content-details">
@@ -256,7 +256,7 @@
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
 
-		
+<script src="JS/password.js"></script>		
 <script src="JS/main.js"></script>
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
