--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -297,21 +297,21 @@
 			</p>
 			</details>
 		<details id="details"> <!--stichting MOOI-->
-		<summary><b>Stichting MOOI</b></summary>
-		<small>jan. 2013 jun. 2013 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
-		<p> 
-		<b>Stagiair Stichting</b> <br /> Medewerker Jongerwerk:
-		<div class="lees-meer-content"> 
-		<ul>
-			<li>Activiteitenbegeleider</li>
-			<li>huiswerkbegeleider</li>
-		</ul>
-		</div>
-		<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
-		</p>
+			<summary><b>Stichting MOOI</b></summary>
+			<small>jan. 2013 jun. 2013 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
+			<p> 
+			<b>Stagiair Stichting</b> <br /> Medewerker Jongerwerk:
+			<div class="lees-meer-content"> 
+			<ul>
+				<li>Activiteitenbegeleider</li>
+				<li>huiswerkbegeleider</li>
+			</ul>
+			</div>
+			<a href="javascript:void(0);" class="lees-meer" title="lees meer">Lees meer</a>
+			</p>
 		</details>
 	</div>
-  </section>
+</section>
 
 <section class="ftco-section"> <!--Werk Momenten-->
 	<div class="container">
@@ -413,6 +413,7 @@
 </section>
 
 </main>
+
 <footer class="footer"> <!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
@@ -425,18 +426,10 @@
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
 
-
-<script src="JS/jquery.min.js"></script>
-<script src="JS/owl.carousel.min.js"></script>
-<script src="JS/main.js"></script>		
-<script src="JS/expando.js"></script>
-<script src="JS/dark.js"></script>
-<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
-
+<script src="JS/dark.js"></script>   <!--Dark mode --------------->
+<script src="JS/expando.js"></script> <!--Widget + Rekenmachine+ BTE------->
+<script src="JS/jquery.min.js"></script> <!--Carousell onderdeel------->
+<script src="JS/owl.carousel.min.js"></script> <!--Carousell onderdeel------->		
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Voor Social icons-->
 </body>
 </html>
