--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -254,16 +254,8 @@
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
-
-		
-<script src="JS/expando.js"></script>
-<script src="JS/dark.js"></script>
-<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
-
+<script src="JS/expando.js"></script> <!--Widget + Rekenmachine+ BTE------->
+<script src="JS/dark.js"></script> <!--Dark mode --------------->
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Voor Social icons-->
 </body>
 </html>
