--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -411,7 +411,16 @@
 		</div>
 	</div>
 </section>
-
+<script>   
+	$('.lees-meer').click(function() {
+	$(this).prev().slideToggle();
+	if (($(this).text()) == "Lees meer") {
+		$(this).text("Lees minder");
+	} else {
+		$(this).text("Lees meer");
+	}
+});
+</script>
 </main>
 
 <footer class="footer"> <!--footer--------------->
