--- a/Projecten.html
+++ b/Projecten.html
@@ -170,7 +170,7 @@
 <div class="row">		
 	<div class="col-md-4">		<!--- Portfolio  -->
 		<div class="content">
-			<a href="https://bkhaie.github.io/Portofolio/index.html" target="_blank">
+			<a href="https://bkhaie.github.io/Portfolio/index.html" target="_blank">
 			<div class="content-overlay"></div>
 			<img class="content-image"  src="Pictures/Portfolio.png" >
 			<div class="content-details">
