--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -406,6 +406,23 @@
 							</div>
 						</div>
 					</div>
+					<div class="item">  <!-- Vabi Schilderen -->	
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+										<img src="Pictures/Ervaringen/Vabibob.png" height="auto" width="auto" > 
+									<p>Vabi Schilderen</p>
+										<figcaption>
+										Tijdens mijn laatste periode bij mijn stage vabi mocht ik een evenement organiseren.  
+										Ik had ervoor gekozen om op locatie chinees te gaan eten en daarna een Bob Ross schilder workshop te gaan doen.
+										Het was een geweldige ervaring! En iedereen was er super blij mee om een eigen schilderij in Bob Ross style te gaan maken 
+										en om mee naar huis te nemen!
+										</figcaption>
+									</figure>									
+						</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
