--- a/Contact.html
+++ b/Contact.html
@@ -172,26 +172,26 @@
 <div class="fcf-body">
 
     <div id="fcf-form">
-    <h3 class="fcf-h3">Contact us</h3>
+    <h3 class="fcf-h3">Contact pagina</h3>
 
     <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
         
         <div class="fcf-form-group">
-            <label for="Name" class="fcf-label">Your name</label>
+            <label for="Name" class="fcf-label">Jouw Naam</label>
             <div class="fcf-input-group">
                 <input type="text" id="Name" name="Name" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
-            <label for="Email" class="fcf-label">Your email address</label>
+            <label for="Email" class="fcf-label">Je email address</label>
             <div class="fcf-input-group">
                 <input type="email" id="Email" name="Email" class="fcf-form-control" required>
             </div>
         </div>
 
         <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
+            <label for="Message" class="fcf-label">Je bericht</label>
             <div class="fcf-input-group">
                 <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
             </div>
