--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 		  <span class="navbar-toggler-icon"></span>
 		</button>
 <div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0"> 
 				<li class="nav-item active">
 					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item">		<!--- Ervaringen	-->
 					<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
 					</li>
-				<li class="nav-item">
+				<li class="nav-item">		<!--- Tijdlijn	-->
 					<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item">		<!--- Projecten	-->
 					<a class="nav-link" href="Projecten.html">Projecten</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item">		<!--- Contact	-->
 					<a class="nav-link" href="Contact.html">Contact</a>
 				</li> 
-				<div class="theme-switch-wrapper">
+				<div class="theme-switch-wrapper">	<!--- Thema switcher button	-->
 					<label class="theme-switch" for="checkbox">
 					  <input type="checkbox" id="checkbox" />
 					  <div class="slider">
@@ -79,7 +79,7 @@
 
 </div>
 
-	  </nav> 												<!--- Navbar End   . -->		   
+	  </nav> 											<!--- Navbar End   . -->		   
 <main>
 <div id="toggle" style="display: none">   <!--- Calculator  -->		
 	<div class="draggable"  >
@@ -166,7 +166,7 @@
 	</div>
 </div>
 
-<div id="container">	
+<div id="container">	<!--- Over mij	-->
 	
 	<div class="product-details">
 		
@@ -200,8 +200,6 @@
 
 </div>
 
-
-
 <div class="about-container"> <!--about-me-text-->
 		<h6>Software Developer</h6>
 		<p>Als MBO student bij de Roc Mondriaan ben ik bereid om door te groeien van Software Developer (MBO) Naar Cybersecurity (HBO) <br>
@@ -209,7 +207,6 @@
 		<p>Wil je meer over mij weten? <br> Neem contact op!</p>
 		<a href="Contact.html" class="btn btn-dark" role="button" aria-pressed="true">Contact</a>
 </div>
-
 
 </main>
 
