--- a/Ervaringen.html
+++ b/Ervaringen.html
@@ -6,12 +6,12 @@
 		<title>Mijn ervaring</title>
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/owl.carousel.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
+
 	</head>
 	
 <body class="light-theme">
+	
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 	<a class="navbar-brand" href="#">Portfolio</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,19 +22,19 @@
 			<li class="nav-item">
 				<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
+			<li class="nav-item">		<!--- Ervaringen	-->
+				<a class="nav-link" href="Ervaringen.html">Ervaringen</a>	
 				</li>
-			<li class="nav-item">
+			<li class="nav-item">		<!--- Tijdlijn	-->
 				<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item">		<!--- Projecten	-->
 				<a class="nav-link" href="Projecten.html">Projecten</a>
 			</li>
-			<li class="nav-item">
+			<li class="nav-item">		<!--- Contact	-->
 				<a class="nav-link" href="Contact.html">Contact</a>
 			</li> 
-			<div class="theme-switch-wrapper">
+			<div class="theme-switch-wrapper">	<!--- Thema switcher button	-->
 				<label class="theme-switch" for="checkbox">
 					<input type="checkbox" id="checkbox" />
 					<div class="slider">
@@ -84,9 +84,11 @@
 
 </div>
 
-</nav> 												<!--- Navbar End    -->		   
+</nav> 												<!--- Navbar End    -->	
+	   
 <main>
-<div id="toggle" style="display: none">   <!--- Calculator  -->		
+
+<div id="toggle" style="display: none">   			<!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -121,7 +123,7 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+<div id="toggle2" style="display: none" >   		<!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 		<p class="player">Player:<span>×</span></p>
@@ -148,7 +150,7 @@
 	</div>
 </div>
 		
-<div class="draggable"  >   <!--- Button widget  -->	
+<div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -171,7 +173,7 @@
 	</div>
 </div>
 
-<section>      <!--Werk Ervaring -->
+<section>      										<!--Werk Ervaring -->
 	<div class="dropdown">
 		<h1>
 		Ervaringen
@@ -313,7 +315,7 @@
 	</div>
 </section>
 
-<section class="ftco-section"> <!--Werk Momenten-->
+<section class="ftco-section"> 						<!--Werk Momenten-->
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
@@ -431,7 +433,7 @@
 
 </main>
 
-<footer class="footer"> <!--footer--------------->
+<footer class="footer"> 							<!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -441,12 +443,15 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-</footer> <!--footer end --------------->
-<script src="JS/jquery.min.js"></script>
-<script src="JS/owl.carousel.min.js"></script>
-<script src="JS/expando.js"></script>
-<script src="JS/dark.js"></script>
+</footer> 											<!--footer end --------------->
+
+<script src="JS/jquery.min.js"></script>		<!--Carousel + Lees meer---->
+<script src="JS/owl.carousel.min.js"></script>	<!--Carousel------->
+<script src="JS/expando.js"></script>		<!--Widget + Rekenmachine+ BTE------->
+<script src="JS/dark.js"></script>		<!--Thema Switcher ----->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
 
 
 </body>
