--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -11,6 +11,7 @@
 	</head>
 
 <body class="light-theme">
+
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 <a class="navbar-brand" href="#">Portfolio</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +87,8 @@
 </nav> 												<!--- Navbar End    -->		   
 
 <main>
-<div id="toggle" style="display: none">   <!--- Calculator  -->		
+
+<div id="toggle" style="display: none">   			<!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -121,7 +123,7 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+<div id="toggle2" style="display: none" >  			<!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 		<p class="player">Player:<span>×</span></p>
@@ -148,7 +150,7 @@
 	</div>
 </div>
 		
-<div class="draggable"  >   <!--- Button widget  -->	
+<div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -171,7 +173,7 @@
 	</div>
 </div>
 		
-<ul class="timeline"><!-- The Timeline -->
+<ul class="timeline">								<!-- The Timeline -->
 
 	<!-- Item 6 -->
 	<li>
@@ -243,7 +245,7 @@
 
 </main>
 
-<footer class="footer"> <!--footer--------------->
+<footer class="footer"> 							<!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -253,9 +255,11 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-</footer> <!--footer end --------------->
+</footer> 											<!--footer end --------------->
+
 <script src="JS/expando.js"></script> <!--Widget + Rekenmachine+ BTE------->
-<script src="JS/dark.js"></script> <!--Dark mode --------------->
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Voor Social icons-->
+<script src="JS/dark.js"></script>		<!--Thema Switcher ----->
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
 </body>
 </html>
