--- a/Contact.html
+++ b/Contact.html
@@ -7,11 +7,10 @@
 		<link href="CSS/contact-form.css" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'/>
 	</head>
 
 <body class="light-theme">
+
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 	<a class="navbar-brand" >Portfolio</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,9 +79,11 @@
 		</ul>
 
 </div>
-</nav> <!--- Navbar End   . -->											<!--- Navbar End    -->		   
+</nav> 												<!--- Navbar End   . -->			
+
 <main>
-<div id="toggle" style="display: none">   <!--- Calculator  -->		
+	
+<div id="toggle" style="display: none">   			<!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -117,7 +118,7 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+<div id="toggle2" style="display: none" >   		<!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 		<p class="player">Player:<span>×</span></p>
@@ -144,7 +145,7 @@
 	</div>
 </div>
 		
-<div class="draggable"  >   <!--- Button widget  -->	
+<div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -167,9 +168,7 @@
 	</div>
 </div>
 
-
-
-<div class="fcf-body">
+<div class="fcf-body">								<!--- Contact pagina  -->
 
     <div id="fcf-form">
     <h3 class="fcf-h3">Contact pagina</h3>
@@ -206,8 +205,8 @@
 
 </div>
 
-
 </main>
+
 <footer class="footer"> <!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
@@ -219,7 +218,10 @@
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
 </footer> <!--footer end --------------->
+
 <script src="JS/expando.js"></script> <!--Widget + Rekenmachine+ BTE------->
 <script src="JS/dark.js"></script> <!--Dark mode --------------->
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
 </body>
 </html>
