--- a/Projecten.html
+++ b/Projecten.html
@@ -6,10 +6,10 @@
 		<title>Projecten</title>
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	</head>
 
 <body class="light-theme">
+
 <nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 		<a class="navbar-brand" >Portfolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,10 +78,11 @@
 			</ul>
 
 </div>
-</nav> <!--- Navbar End   . -->
+</nav> 												<!--- Navbar End   . -->
 														   
 <main>
-<div id="toggle" style="display: none">   <!--- Calculator  -->		
+	
+<div id="toggle" style="display: none">   			<!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -116,7 +117,7 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+<div id="toggle2" style="display: none" >   		<!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 		<p class="player">Player:<span>×</span></p>
@@ -143,7 +144,7 @@
 	</div>
 </div>
 		
-<div class="draggable"  >   <!--- Button widget  -->	
+<div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -166,7 +167,7 @@
 	</div>
 </div>
 
-<div class="container">		<!--- Rij 1  -->
+<div class="container">								<!--- Project  Rij 1  -->
 <div class="row">		
 	<div class="col-md-4">		<!--- Portfolio  -->
 		<div class="content">
@@ -204,7 +205,7 @@
 </div>
 
 </div>
-<div class="container">		<!--- Rij 2  -->
+<div class="container">								<!--- Project Rij 2  -->
 	<div class="row">
 		<div class="col-md-4">		<!--- bloemen  -->
 			<div class="content">
@@ -244,7 +245,7 @@
 
 </main>
 
-<footer class="footer"> <!--footer--------------->
+<footer class="footer"> 							<!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -254,10 +255,13 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-</footer> <!--footer end --------------->
+</footer> 											<!--footer end --------------->
+
 <script src="JS/expando.js"></script> <!--Widget + Rekenmachine+ BTE------->
-<script src="JS/dark.js"></script> <!--Dark mode --------------->
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Voor Social icons-->
+<script src="JS/dark.js"></script>		<!--Thema Switcher ----->
 <script src="JS/main.js"></script> <!-- Popupmelding + Password Protection + Download  --------------->
+<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
+
 </body>
 </html>
