--- a/index.html
+++ b/index.html
@@ -6,82 +6,84 @@
 		<title>Home</title>
 		<link rel="stylesheet" href="CSS/style.css">
 		<link rel="stylesheet" href="bootstrap/bootstrap.css/bootstrap.min.css">
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	</head>
 
 <body class="light-theme">
-	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
-		<a class="navbar-brand" >Portfolio</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
+
+<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
+	<a class="navbar-brand" >Portfolio</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 <div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0"> 
-				<li class="nav-item active">
-					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+		<ul class="navbar-nav mr-auto mt-2 mt-lg-0"> 
+			<li class="nav-item active">
+				<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+			</li>
+			<li class="nav-item">		<!--- Ervaringen	-->
+				<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
 				</li>
-				<li class="nav-item">		<!--- Ervaringen	-->
-					<a class="nav-link" href="Ervaringen.html">Ervaringen</a>
-					</li>
-				<li class="nav-item">		<!--- Tijdlijn	-->
-					<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
-				</li>
-				<li class="nav-item">		<!--- Projecten	-->
-					<a class="nav-link" href="Projecten.html">Projecten</a>
-				</li>
-				<li class="nav-item">		<!--- Contact	-->
-					<a class="nav-link" href="Contact.html">Contact</a>
-				</li> 
-				<div class="theme-switch-wrapper">	<!--- Thema switcher button	-->
-					<label class="theme-switch" for="checkbox">
-					  <input type="checkbox" id="checkbox" />
-					  <div class="slider">
-						<svg             
-						  width="16"
-						  height="16"
-						  viewBox="0 0 24 24"
-						  fill="none"
-						  stroke="currentColor"
-						  stroke-width="2"
-						  stroke-linecap="round"
-						  stroke-linejoin="round"
-						  class="feather feather-sun"
-						>
-						  <circle cx="12" cy="12" r="5"></circle>
-						  <line x1="12" y1="1" x2="12" y2="3"></line>
-						  <line x1="12" y1="21" x2="12" y2="23"></line>
-						  <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-						  <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-						  <line x1="1" y1="12" x2="3" y2="12"></line>
-						  <line x1="21" y1="12" x2="23" y2="12"></line>
-						  <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-						  <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-						</svg>
-						<svg
-						  width="16"
-						  height="16"
-						  viewBox="0 0 24 24"
-						  fill="none"
-						  stroke="currentColor"
-						  stroke-width="2"
-						  stroke-linecap="round"
-						  stroke-linejoin="round"
-						  class="feather feather-moon"
-						>
-						  <path
-							d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
-						  ></path>
-						</svg>
-					  </div>
-					</label>
-				  </div>
-			</ul>
+			<li class="nav-item">		<!--- Tijdlijn	-->
+				<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
+			</li>
+			<li class="nav-item">		<!--- Projecten	-->
+				<a class="nav-link" href="Projecten.html">Projecten</a>
+			</li>
+			<li class="nav-item">		<!--- Contact	-->
+				<a class="nav-link" href="Contact.html">Contact</a>
+			</li> 
+			<div class="theme-switch-wrapper">	<!--- Thema switcher button	-->
+				<label class="theme-switch" for="checkbox">
+					<input type="checkbox" id="checkbox" />
+					<div class="slider">
+					<svg             
+						width="16"
+						height="16"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-sun"
+					>
+						<circle cx="12" cy="12" r="5"></circle>
+						<line x1="12" y1="1" x2="12" y2="3"></line>
+						<line x1="12" y1="21" x2="12" y2="23"></line>
+						<line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+						<line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+						<line x1="1" y1="12" x2="3" y2="12"></line>
+						<line x1="21" y1="12" x2="23" y2="12"></line>
+						<line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+						<line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+					</svg>
+					<svg
+						width="16"
+						height="16"
+						viewBox="0 0 24 24"
+						fill="none"
+						stroke="currentColor"
+						stroke-width="2"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						class="feather feather-moon"
+					>
+						<path
+						d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+						></path>
+					</svg>
+					</div>
+				</label>
+				</div>
+		</ul>
 
 </div>
 
-	  </nav> 											<!--- Navbar End   . -->		   
+</nav> 												<!--- Navbar End   . -->
+											   
 <main>
-<div id="toggle" style="display: none">   <!--- Calculator  -->		
+
+<div id="toggle" style="display: none">   			<!--- Calculator  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 			<div class="cal-container">
@@ -116,7 +118,7 @@
 	</div>
 </div>
 
-<div id="toggle2" style="display: none" >   <!--- TicTakToe  -->		
+<div id="toggle2" style="display: none" >  			<!--- TicTakToe  -->		
 	<div class="draggable"  >
 		<div class="draggableheader">
 		<p class="player">Player:<span>×</span></p>
@@ -143,7 +145,7 @@
 	</div>
 </div>
 		
-<div class="draggable"  >   <!--- Button widget  -->	
+<div class="draggable"  >   						<!--- Button widget  -->	
 	<div class="draggableheader">
 		<div class="expando js-expando">
 			<div class="expando__inner js-expando-inner">
@@ -166,7 +168,7 @@
 	</div>
 </div>
 
-<div id="container">	<!--- Over mij	-->
+<div id="container">								<!--- Over mij	-->
 	
 	<div class="product-details">
 		
@@ -180,7 +182,7 @@
 			</p>		
 </div>
 	
-<div class="product-image">
+<div class="product-image">							<!-- Quotes & Hobbies -->
 	
 	<img src="Pictures/profile.png"  alt="">
 	
@@ -200,7 +202,7 @@
 
 </div>
 
-<div class="about-container"> <!--about-me-text-->
+<div class="about-container"> 						<!--about-me-text-->
 		<h6>Software Developer</h6>
 		<p>Als MBO student bij de Roc Mondriaan ben ik bereid om door te groeien van Software Developer (MBO) Naar Cybersecurity (HBO) <br>
            <i> "Who dares wins 🏆"</i> </p>
@@ -210,7 +212,7 @@
 
 </main>
 
-<footer class="footer"> <!--footer--------------->
+<footer class="footer"> 							<!--footer--------------->
 	<h2>Social media</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
@@ -220,14 +222,11 @@
 			<a href="https://www.youtube.com/channel/UCZ-RI7bsQ7fF7bVr_5RS8lg"><i class="fab fa-youtube"></i></a>
 		</div>
 		<p class="copyright">Butter since 1998 ©</p>
-</footer> <!--footer end --------------->
-<script src="JS/expando.js"></script>
-<script src="JS/dark.js"></script>
+</footer> 											<!--footer end --------------->
+
+<script src="JS/expando.js"></script>				<!--Widget + Rekenmachine+ BTE------->
+<script src="JS/dark.js"></script>					<!--Thema Switcher ----->
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
 
 </body>
