--- a/Projecten.html
+++ b/Projecten.html
@@ -242,6 +242,19 @@
 		</div>
 	</div>
 </div>
+<div class="container">								<!--- Project Rij 3  -->
+	<div class="row">
+		<div class="col-md-4">		<!--- Pizza mes  -->
+			<div class="content">
+				<a  id="boterkaas" onclick="pizzames()"  target="_blank">
+					<div class="content-overlay"></div>
+					<img class="content-image"  src="Pictures/pizzames.png" >
+					<div class="content-details">
+						<h3 class="content-title">Pizzaria</h3>
+					</div>
+					</a>
+			</div>
+		</div>
 
 </main>
 
