--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -246,7 +246,7 @@
 </main>
 
 <footer class="footer"> 							<!--footer--------------->
-	<h2>Social media</h2>
+	<h2>Social media.</h2>
 	<p>Wil je meer zien van mij?  </p>
 		<div class="social-icons">
 			<a href="https://github.com/bkhaie"><i class="fab fa-github"></i></a>
