--- a/Contact.html
+++ b/Contact.html
@@ -178,7 +178,7 @@
 			<div class="col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
 				<div class="contact-form-area">
 					<form>
-						<h3>Contact</h3>	
+						<h3>Contacttest</h3>	
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="Your Name"  required >
 						</div>
