--- a/Contact.html
+++ b/Contact.html
@@ -167,41 +167,29 @@
 	</div>
 </div>
 
-<section id="contact">								<!--- Contact page  -->
 
-	<div id="map"></div>
-
-	<div class="contact-container">
-
-		<!-- Example row of columns -->
-		<div class="row-contact">
-			<div class="col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
-				<div class="contact-form-area">
-					<form>
-						<h3>Contacttestt</h3>	
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Name"  required >
-						</div>
-
-						<div class="form-group">
-							<input type="email" class="form-control" placeholder="Your Email" required>
-						</div>
-
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Your Subject">
-						</div>
-
-						<div class="form-group">
-							<textarea class="form-control" rows="7" placeholder="Message" required></textarea>
-						</div>
-
-						<button type="submit" class="btn btn-primary contact-btn">SEND</button>
-					</form>
-				</div>	
-			</div>
+<div class="contact-container"> 						<!--about-me-text-->
+	<form>
+		<h3 class="contact">Contact</h3>	
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Your Name"  required >
 		</div>
-	</div> <!-- /container -->       
-</section>
+
+		<div class="form-group">
+			<input type="email" class="form-control" placeholder="Your Email" required>
+		</div>
+
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Your Subject">
+		</div>
+
+		<div class="form-group">
+			<textarea class="form-control" rows="7" placeholder="Message" required></textarea>
+		</div>
+
+		<button type="submit" class="btn btn-primary contact-btn">SEND</button>
+	</form>
+</div>
 
 </main>
 
