--- a/Projecten.html
+++ b/Projecten.html
@@ -182,7 +182,7 @@
 	</div>
 	<div class="col-md-4">		<!--- kaartspel  -->
 		<div class="content">
-			<a  id="rekenmachine" onclick="kaartspel()"  target="_blank">
+			<a  id="rekenmachine" onclick="kaartspel()"  target="_blank" rel="noopener noreferrer">
 			<div class="content-overlay"></div>
 			<img class="content-image"  src="Pictures/Hogerlager.png" >
 			<div class="content-details">
@@ -193,7 +193,7 @@
 	</div>
 	<div class="col-md-4">		<!--- Rekenmachine  -->
 		<div class="content">
-			<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank">
+			<a  id="rekenmachine" onclick="Rekenmachine()"  target="_blank" rel="noopener noreferrer">
 			<div class="content-overlay"></div>
 			<img class="content-image"  src="Pictures/Rekenmachine.png" >
 			<div class="content-details">
